@@ -1,0 +1,19 @@
+attribute	application	test40pmc.p
+attribute	basetime	0
+attribute	perl_version	0
+attribute	ticks_per_sec	0
+attribute	xs_version	0
+fid_block_time	1	4	[ 0 1 ]
+fid_block_time	2	6	[ 0 1 ]
+fid_fileinfo	1	[ test40pmc.p   1 0 0 0 ]
+fid_fileinfo	2	[ test40pmc.pm   2 1 0 0 ]
+fid_line_time	1	4	[ 0 1 ]
+fid_line_time	2	6	[ 0 1 ]
+fid_sub_time	1	4	[ 0 1 ]
+fid_sub_time	2	6	[ 0 1 ]
+profile_modes	fid_block_time	block
+profile_modes	fid_line_time	line
+profile_modes	fid_sub_time	sub
+sub_caller	test40pmc::foo	1	4	[ 1 0 0 0 0 ]
+sub_subinfo	main::BEGIN	[ 1 3 3 0 0 0 ]
+sub_subinfo	test40pmc::foo	[ 2 5 7 1 0 0 ]
