@@ -1,0 +1,7 @@
+# Profile data generated by Devel::NYTProf::Reader
+# More information at http://search.cpan.org/dist/Devel-NYTProf/
+# Format: time,calls,time/call,code
+0,0,0,# test test40pmc.pmc is loaded instead of test40pmc.pm
+0,0,0,# (which requires test40pmc.pmc to be newer, which Makefile.PL arranges)
+0,0,0,use test40pmc;
+0,1,0,test40pmc::foo();
